--- a/backend/.env
+++ b/backend/.env
@@ -1,8 +1,8 @@
 CLOUDINARY_CLOUD_NAME=omg
 CLOUDINARY_KEY=lol
 CLOUDINARY_SECRET=yarite
-COOKIE_SECRET="PLEASE CHANGE ME OH PLEASE CHANGE ME"
-DATABASE_URL=mongodb://localhost:27017/sick-fits-keystone
+COOKIE_SECRET="SimpleCookie"
+DATABASE_URL=mongodb+srv://sickadmin:52GNSjmXQ53APNm@sickcluster.fmjxe.mongodb.net/sickfits?retryWrites=true&w=majority
 STRIPE_SECRET="sk_test_nahhhh"
 MAIL_HOST="smtp.ethereal.email"
 MAIL_PORT=587
