--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
 CLOUDINARY_CLOUD_NAME=omg
 CLOUDINARY_KEY=lol
 CLOUDINARY_SECRET=yarite
-COOKIE_SECRET="SimpleCookie"
+COOKIE_SECRET="SimpleCookietoeatallthetime2020incalifornia"
 DATABASE_URL=mongodb+srv://sickadmin:52GNSjmXQ53APNm@sickcluster.fmjxe.mongodb.net/sickfits?retryWrites=true&w=majority
 STRIPE_SECRET="sk_test_nahhhh"
 MAIL_HOST="smtp.ethereal.email"
